fixed form alignment

--- a/src/Login.css
+++ b/src/Login.css
@@ -16,7 +16,8 @@ body{
     backdrop-filter: blur(10px);
     width: 400px;
     margin: 50px auto;
-    margin-top:100px;
+    margin-top:110px;
+    margin-left: 110px;
     padding-bottom: 20px;
     max-height:fit-content;
     border-radius: 10px;
@@ -45,6 +46,7 @@ body{
     margin-bottom:10px;
     margin-top: 35px;
     cursor: pointer;
+    color: #aba9a9;
     
     
 }
@@ -56,6 +58,11 @@ input:hover{
     margin-bottom: 20px;
     cursor: pointer;
     border: 1px solid white;
+    width: 100px;
+    height: 25px;
+    
+    font-style: oblique;
+    font-weight: bold;
 }
 
 .f4:hover{
