--- a/src/Register.css
+++ b/src/Register.css
@@ -46,7 +46,7 @@ body{
     margin-bottom:10px;
     margin-top: 30px;
     cursor: pointer;
-    color: #6e6e6e23;
+    color: #aba9a9;
     
     
 }
@@ -61,6 +61,8 @@ input:hover{
     width: 100px;
     height: 25px;
     border: 1px solid white;
+    font-style: oblique;
+    font-weight: bold;
 }
 
 .f6:hover{
